--- a/templates/login.html
+++ b/templates/login.html
@@ -10,22 +10,18 @@
       {% endfor %}
    {% endif %}
 
-	
-  <div class="form-group row col-lg-6 row d-flex justify-content-center">
-    <label for="username" class="col-form-label">Username</label>
-    <div class="col-sm-10">
-      <input type="text" name="username" class="form-control" id="username">
+  <h1>Login - passwordsafe</h1>
+  <br>
+  <div class="form-row">
+    <div class="col">
+      <input type="text" name="username" class="form-control" id="username" placeholder="username">
+    </div>
+    <div class="col">
+      <input type="password" name="password" class="form-control" id="password" placeholder="password">
     </div>
   </div>
-  <div class="form-group row col-lg-6 row d-flex justify-content-center">
-    <label for="password" class=" col-form-label">Password</label>
-    <div class="col-sm-10">
-      <input type="password" name="password" class="form-control" id="password">
-    </div>
-  </div>
-   
-    
-    <button type="submit" class="btn btn-success">Login</button>
+  <br>
+    <button type="submit" class="btn btn-success col-md-6">Login</button>
     
  </form>
 
