--- a/templates/main.html
+++ b/templates/main.html
@@ -2,49 +2,49 @@
 {% block content %}
 {% if user.is_anonymous %}
 <h1>Random Password</h1>
-<div class="col-lg-12 wrapper">
-  <div class="password-wrapper col-md-6 text-center">
-    <div id="ff" class="text-muted text-center password">
-      Password Generated
-    </div>
+<div class="form-row">
+  <div class="col">
+    <input style="color: white;" class="form-control text-muted" id="passwordsafe" type="text" placeholder="password generated" readonly>
   </div>
+  <br>
+<button id="generate" class="btn  btn-success text-cente">Generate</button>
 </div>
-<button class="btn btn-success col-lg-6" id="generate">Generate</button>
 <br>
-<h4>Login to have your passwords saved</h4>
-
-{% endif %} 
+<p class="text-muted" >Login to have your password saved</p>
+{% endif %}
+<br>
 {% if user.is_authenticated %}
 <h1>Generate Password</h1>
-
-<form action="" method="POST" id="form_id">
+<br>
+<form action="" method="POST" id="form_id" class="text-center">
   {% csrf_token %}
-  <div class="form-group">
-    <label class="label">Name</label>
+  <div class="form-row">
+    <div class="col">
+      <input
+        type="text"
+        class="form-control form-control-sm"
+        name="passwordname"
+        id="passwordname"
+        placeholder="name"
+      />
+    </div>
+  <br>
+  <div class="col">
     <input
-      type="text"
-      class="form-control"
-      name="passwordname"
-      id="passwordname"
-      placeholder="name your password"
-    />
-  </div>
-  <div class="form-group">
-    <label class="label">Password</label>
-    <input
-      class="form-control"
+      class="form-control form-control-sm"
       type="text"
       name="passwordsafe"
       id="passwordsafe"
-      placeholder="type in a password OR Generate one"
+      placeholder="password generated"
     />
   </div>
+</div>
+<br>
   <button type="submit"  class="btn btn-primary">Submit</button>
-<button id="generate" class="btn btn-success">Generate</button>
+<button id="generate" class="btn btn-success text-cente">Generate</button>
+
 </form>
-
-
-
-
 {% endif %} 
+
+
 {% endblock %}
