--- a/templates/Register.html
+++ b/templates/Register.html
@@ -2,25 +2,16 @@
 
 
 {% block content %}
-
 <form method="POST"> 
  {% csrf_token %}
-  {% if messages %}
-     {% for message in messages %}
-        {{message}}
-      {% endfor %}
-   {% endif %}
+ <div class="form-row">
  {% for field in form %}
-<p>
-  {{ field.label_tag }} 
-  {{ field }}
-    {% for error in field.errors %}
-        {{ error }}
-    {% endfor %}
- </p>
- {% endfor %}
+    <div class="form-group col-md-6">
+        {{ field }}
+    </div>
+{% endfor %}
+</div>
 
  <button class="btn btn-success" type="submit">Sign Up </button>
 </form>
-
 {% endblock %}
