--- a/templates/Register.html
+++ b/templates/Register.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
-
-
+{% block title %} Register-passwordsafe{% endblock %}
 {% block content %}
+<h1>Register - passwordsafe</h1>
+<br>
 <form method="POST"> 
+
  {% csrf_token %}
  <div class="form-row">
  {% for field in form %}
